# HydroSim

./: .gitignore  README.md  docker-compose.yaml  my.cnf
.likec4/: logview.likec4.snap
HydroSim-QT-Simulation/: CMakeLists.txt  README.md  backend.cpp  backend.h  main.cpp  mqttclientwrapper.cpp  mqttclientwrapper.h  resources.qrc
HydroSim-QT-Simulation/certs/: ca.crt  client.crt  client.key
HydroSim-QT-Simulation/devices/: Device.h  Pump.cpp  Pump.h  Valve.cpp  Valve.h
HydroSim-QT-Simulation/docs/: Developer Guide.md
HydroSim-QT-Simulation/qml/: Main.qml
PLC/docs/: plc.md
Raspberry Pi/: .env  dataklasse.py  main.py  requirements.txt
Raspberry Pi/docs/: OpenVPN_Guide.md  Project_Documentation.md  Raspberry_Pi_Documentation.md
docs/: README.md  epanet.md  mqtt.md  netplan_configuration_guide.md  openplc.md  opensearch.md  scadalts.md
docs/C4 model/: readme.md
docs/C4 model/hardware/: gateway.c4  hardware.c4
docs/C4 model/server/: epanet.c4  hwconnection.c4  log.c4  server.c4  ui.c4
epanet/app/: epanet.py  scenario.inp
mqtt/: .env  docker-compose.yml  generate_all.sh  generate_ca.sh  generate_client_certs.sh  generate_server_certs.sh  test_mqtt.py  test_pub.sh  test_sub.sh
mqtt/conf/: mosquitto.conf
openplc/: openplc_ports.txt  zone_2.st  zone_3.st  zone_4.st
website/: api.php  chat-proxy.php  index.php  old.x
website/assets/css/: style.css
website/assets/js/: app.js
website/includes/: config.php  db.php  init_session.php
website/includes/modules/: api_fetch.php  api_test.php  api_tokens.php  authorization.php  login_helpers.php  output_escaping.php  verify_password.php
website/labsys-wiki-old/: index.php
website/labsys-wiki-old/includes/: actions.php  config.php  logger.php  ssrf_secure.php
website/templates/: diagnostics.php  footer.php  login.php  logs.php  profile.php  toolbar.php  view.php  view_bu.php
(+10 files in other folders)
